Allow noneunique style names with different family

If a style has a different family allow it to have the same name as a differnt
style. This allows to have a page style named standard and also a paragraph style
with this name.
This fixes roundtrip saving of header/footers in words.

REVIEW: 109370
BUG: 316412